# agent-ctrl

./: .dockerignore  .gitignore  README.md  pyproject.toml
ctrl/approvals/: api.py
ctrl/cli/: main.py  policy.py
ctrl/config/: loader.py  schema.py
ctrl/db/: migrate.py
ctrl/langchain/: client.py
ctrl/policy/: conditions.py  core.py
ctrl/risk/: engine.py  expr.py
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/console/: page.tsx
dashboard/app/requests/: page.tsx
demos/: langchain_context7.py  langchain_context7_demo.py
demos/e2e_publish_market_report/: .env.example  DEMO.md  Dockerfile  README.md  agent.py  docker-compose.yml  run.sh
demos/e2e_publish_market_report/configs/: policy.yaml  risk.yaml  servers.yaml
docs/: concepts.md  quickstart.md
docs/example-policies/01-baseline-sandbox/: policy.yaml  risk.yaml  servers.yaml
docs/example-policies/02-gated-deploys/: policy.yaml  risk.yaml  servers.yaml
docs/example-policies/03-contextual-controls/: policy.yaml  risk.yaml  servers.yaml
docs/example-policies/04-change-management/: policy.yaml  risk.yaml  servers.yaml
docs/example-policies/05-regulated-data/: policy.yaml  risk.yaml  servers.yaml
docs/integrations/: langchain.md  mcp_servers.md
docs/policies/: examples.md  templates.md
migrations/: 001_init.sql  002_add_risk_and_approval.sql
